--- a/locale/en.yml
+++ b/locale/en.yml
@@ -13,6 +13,8 @@ clarkwinkelmann-godot-embed:
         title: Godot Embedded Player # Not usually visible but it might be shown by the browser in alerts coming from the iframe
         canvas-unsupported: HTML5 canvas appears to be unsupported in the current browser. Try updating or use a different browser.
         webgl-not-available: WebGL not available
+        fullscreen-not-available: Full screen not available on this device
+        force-quit: Game did not quit properly. Force restart?
         load-game: Click to load game
-        exit-game: Exit game
+        restart-game: Restart game
         full-screen: Full screen
