Full screen fallback

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -13,7 +13,7 @@ clarkwinkelmann-godot-embed:
         title: Godot Embedded Player # Not usually visible but it might be shown by the browser in alerts coming from the iframe
         canvas-unsupported: HTML5 canvas appears to be unsupported in the current browser. Try updating or use a different browser.
         webgl-not-available: WebGL not available
-        fullscreen-not-available: Full screen not available on this device
+        fullscreen-not-available: Full screen is not available on this device. Do you want to open the game in a new tab?
         force-quit: Game did not quit properly. Force restart?
         load-game: Click to load game
         quit-game: Quit game
