Implement filesizes to fix progress bar

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -2,7 +2,9 @@ clarkwinkelmann-godot-embed:
     admin:
         settings:
             basePath: Base Path
-            basePathHelp: URL to a folder containing <code>godot.js</code> and <code>godot.wasm</code>, without any trailing slash
+            basePathHelp: URL to a folder containing <code>godot.js</code> and <code>godot.wasm</code>, without any trailing slash.
+            wasmFileSize: WASM file size
+            wasmFileSizeHelp: Used to display progress bar. In bytes.
             iframeHost: Iframe Host
             iframeHostHelp: >
                 By default the iframe is served from Flarum domain, but this leaves the website vulnerable to XSS attacks.
